[workspace]
members = ["scripts/", "test_utils/"]
resolver = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]
anyhow = { version = "1.0.99", default-features = false }
gix = { version = "0.83.0", default-features = false, features = ["revision", "sha1"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
