[package]
name = "scripts"
version = "1.3.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.47", default-features = false, features = [
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage"
] }
clap_complete = { version = "4.5.57" }
gix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "=2.2.2"
insta = "=1.47.2"
pretty_assertions = "=1.4.1"
tempfile = "=3.27.0"
test_utils = { path = "../test_utils" }

[build-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = { version = "4.5.57" }
